# WPATpy

./: .gitignore  MANIFEST.in  README.md  alphabet.py  main.py  pyproject.toml  requirements.txt  test.py
runs/: config.ini  nato_phonetics.py
src/: main.py  modules.py
src/WPATpy_yehor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/runs/: config.ini  nato_phonetics.py
